--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,10 @@
         .test {
             color: #02c9ae;
         }
+
+        .name {
+            font-size: 22px;
+            color: #02c9ae;
+        }
     }
 }
