发现bug，修改scss不会自动刷新

--- a/src/routes/account/Account.scss
+++ b/src/routes/account/Account.scss
@@ -8,8 +8,10 @@
             color: brown;
         }
 
-        .inner {
-            color: brown;
+        .wrapper {
+            width: 440px;
+            color: crimson;
+            margin: 0 auto;
         }
     }
 }
